# easy_console

./: Cargo.toml  Makefile  README.md  SPEC.md
src/: app.rs  config.rs  logger.rs  macros.rs  main.rs  search.rs
src/input/: history.rs  mod.rs
src/serial/: mod.rs  reader.rs  writer.rs
src/ui/: input_bar.rs  layout.rs  log_view.rs  mod.rs  stats_panel.rs  status_bar.rs
src/ui/popup/: help.rs  macros.rs  mod.rs  port_select.rs  settings.rs
