[package]
name = "easy_console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easy_console"
path = "src/main.rs"

[dependencies]
serialport = "4"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3"
regex = "1"
chrono = "0.4"
anyhow = "1"
dirs = "5"
